# vanilla-lang

./: .gitignore  ChangeLog.md  LICENSE  README.md  SystemF.cabal  hie.yaml  output.txt  package.yaml  project.nix  release.nix  shell.nix  stack.yaml  vanilla-lang.cabal
app/: Main.hs
backend/: Main.hs  Server.hs
dist-newstyle/cache/: config
example/: add.sf  add.vn  cont.vn  evenodd.sf  evenodd.vn  id.sf  id.vn  illformed-list.vn  illtyped-id.vn  illtypedid.sf  map.vn  not.sf  polylet.sf  polylet.vn
src/: Example.hs  Lib.hs  Parser.hs  SystemF.hs  Utils.hs  Vanilla.hs
src/Dynamic/: Eval.hs  Step.hs
src/Static/: Context.hs  Expr.hs  Type.hs  TypeCheck.hs  WellForm.hs
src/Syntax/: Cons.hs  Context.hs  Decl.hs  Expr.hs  Program.hs  Type.hs
src/SystemF/: Examples.hs  Program.hs
src/Vanilla/: Examples.hs  Parser.hs  Server.hs  Utils.hs
src/Vanilla/Dynamic/: Eval.hs  Step.hs
src/Vanilla/Static/: Context.hs  StaticError.hs  TypeCheck.hs  WellForm.hs
src/Vanilla/Static/TypeCheck/: DeclCheck.hs  Internal.hs  StaticError.hs  WellForm.hs
src/Vanilla/Syntax/: Cons.hs  Decl.hs  Expr.hs  Program.hs  Type.hs
test/: DeclSpec.hs  EvalSpec.hs  ParserSpec.hs  Spec.hs  TypeCheckSpec.hs
